fixed columns height and left align for 4th item in the feed

--- a/sass/partials/_5_columns.scss
+++ b/sass/partials/_5_columns.scss
@@ -108,6 +108,10 @@
 	@include breakpoint(sm) {
 		float: left;
 		margin-left: 2.564102564102564%;
+
+		.feed & {
+			min-height: 450px;
+		}
 	}
 }
 
